tests/programs/parsing_errors/no_longer_optional_comma.stderr

SyntaxError: missing comma in argument list
at programs/parsing_errors/no_longer_optional_comma.re:2:14