tests/programs/parsing_errors/no_longer_optional_comma.re
# previously accepted, errors now
_(print("a") print("b"))
